Revision 4.2.5rc1
-----------------

- License updated to vanilla BSD 2-Clause to ease package use
  (http://opensource.org/licenses/BSD-2-Clause).
- A dozen of lightweight Twisted-based example scripts replaced more
  complex example implementations used previously.
- Packet-level SNMP API (pysnmp.proto.api) getErrorIndex() method can now
  be instructed to ignore portentially malformed errorIndex SNMP packet
  value what sometimes happens with buggy SNMP implementations.
- Standard SNMP Apps and built-in proxy now ignores malformed errorIndex
  value.
- Built-in logging now includes timestamps.
- Multi-lingual capabilities of all CommandGenerator & NotificationOriginator
  apps re-worked and improved. For instance it is now it's possible to run
  getBulk() against a SNMPv1 Agent invoking built-in SNMP Proxy behind the
  scene.
- The $PYSNMP_MIB_DIR & $PYSNMP_MIB_DIRS & $PYSNMP_MIB_PKGS path separator
  made platform-specific.
- Change to rfc2576.v1tov2() logic: errorStatus = noSuchName is now 
  translated into rfc1905.noSuchObject exception value for *all* var-bindings
  at once. Although RFC2576 does not suggest error-status -> v2c exception
  translation, historically pysnmp used to perform it for a long time so we
  can't easily stop doing that.
- The snmpCommunityTable row selection improved to follow RFC2576, clause
  5.2.1.
- Fix and significant logic rework of snmpCommunityTable to make it working
  in both Generator and Responder modes and better follow RFC2576 
  requirements on sequential entries lookup and selection. As a side effect,
  untagged snmpCommunityTable entries will *not* match tagged 
  snmpTargetAddrTable entries and vice versa.
- Fix to Twisted-based NotificationOriginator to make it serving INFORMs again.
- Fix to rfc2576.v1tov2() logic: errorStatus = noSuchName is now translated
  into rfc1905.noSuchObject exception value for *all* var-bindings. Although
  this is not mentioned in RFC, it looks as a more consistent approach.